2017-10-07  Bruno Haible  <bruno@clisp.org>

	Relax the Autoconf test for mmap with MAP_FIXED.
	* m4/mmap.m4 (CL_MMAP): Test only whether mmap with MAP_FIXED works
	for some address.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-10-07  Bruno Haible  <bruno@clisp.org>

	Remove support for Sun-4 machines prior to Sun-4m.
	* m4/mmap.m4 (CL_MMAP): Don't define HAVE_MMAP_DEVZERO_SUN4_29.
	* configure.in: Update comment.
	* makemake.in (XCFLAGS): Don't define SUN4_29.
	* lispbibl.d: Remove tests of SUN4_29.
	* unix.d: Simplify accordingly.
	* spvw.d (init_memory): Remove SUN4_29 special case.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-10-07  Bruno Haible  <bruno@clisp.org>

	Update after the newest change in libsigsegv's API.
	* spvw_mmap.d (system_pagesize): New variable.
	(mmap_init_pagesize): Initialize it.
	* spvw_fault.d (handle_fault): Use system_pagesize instead of the
	(constant) value of SIGSEGV_FAULT_ADDRESS_ALIGNMENT.
	* spvw_fault_old.d (handle_fault): Likewise.

2017-10-07  Bruno Haible  <bruno@clisp.org>

	Fix compilation error on FreeBSD (regression from 2017-10-06).
	* m4/vadvise.m4: New file.
	* configure.in: Invoke CL_VADVISE.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-10-06  Bruno Haible  <bruno@clisp.org>

	Fix compilation error on NetBSD 8 beta.
	* unix.d (vadvise): Assume it is declared in <sys/vadvise.h>.
	* configure.in: Don't invoke CL_VADVISE. Just check for vadvise instead.
	* m4/vadvise.m4: Remove file.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-10-05  Bruno Haible  <bruno@clisp.org>

	Autoconf macros: Use AS_HELP_STRING systematically.
	AS_HELP_STRING ensures proper column alignment.
	Note that its first argument must be double quoted, otherwise brackets
	in the argument are discarded if they are not escaped as trigraphs.
	* m4/clisp.m4 (CL_CLISP): Fix indentation and quoting style.
	* m4/ffcall.m4 (CL_FFCALL): Talk about GNU libffcall. Use AS_HELP_STRING